# lcs

./: .gitignore  CMakeLists.txt  LICENSE
client/: CMakeLists.txt  Client.h  main.cpp
helpers/: ConfigHelper.h  Defines.h  ErrorHelper.h  ExecutorHelper.h  ListFilesHelper.h  ModificationTimeHelper.h  OutputCapturerHelper.h  ProcessListHelper.h  ReceiveHelper.h  SendHelper.h  TransferFileHelper.h  UploadFileHelper.h
server/: CMakeLists.txt  CommandHandler.h  Server.h  ThreadPool.h  main.cpp
